# ai-model-finetuning

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
config/: model_config.yaml  training_config.yaml
docs/: CONCEPTS.md  SETUP_GUIDE.md  TROUBLESHOOTING.md
examples/: simple_example.py
setup/: install.sh
src/: __init__.py
src/core/: __init__.py
src/deployment/: __init__.py  devstral_modal_deployment.py
src/models/: __init__.py
src/utils/: __init__.py  filesystem_tools.py
tests/: __init__.py
tests/e2e/: test_deployment.py
tests/integration/: test_workflow.py
tests/unit/: test_core.py
